[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
dhat = { version = "0.3.3", optional = true }
itertools = "0.13.0"
nom = "7"
rayon = "1.10.0"

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
